* Version 0.7.8-beta
  Console:
  * New: Mouse copy&paste with key Win-C in FLTK console. (Shai Vaingast)

* Version 0.7.7
  Console and daemons:
  * New: "color=black,white" sets default color. (Peter Kuznetsov)
  * New: "cursor=1..99" sets cursor size of nt-console. (Peter Kuznetsov)
  * TAB as separator in command line args. (Peter Kuznetsov)
  * Supress "<d>" KERN_DEFAULT and "<c>" KERN_CONT on daemon printk output.

  Kernel:
  * Version 2.6.26.8
    o ext4fs enabled, backport patch 2.6.26-ext4-7 added.
      Please read about using ext4 in kernel 2.6.26:
      http://ext4.wiki.kernel.org/index.php/Ext4_Howto#For_people_who_are_running_Debian
      (Thanks Frédéric L. W. Meunier)
    o Squashfs 3.4, Unionfs 2.5.4, Cloop 2.628
  * Version 2.6.25.20

  Buildsystem / sources:
  * Source format cleanup. (Peter Kuznetsov)
  * premaid.sh moved into bin directory.

  Kernel:
  * CONFIG_SYSFS_DEPRECATED: Disabled. Newer udev don't like it. (El Topo)

  Updated tools:
  * binutils 2.19.1

* Version 0.7.6
  * Bug #2895531: "mkfs.ext3 freezes on scsi disks" fixed by limit number
    of entries in scsi queue from 73 to 32, and changed type from Critical-
    into DelayedWorkQueue.
  * Bug #2890857: Fixed panic "COSCSI: response: use_sg (2) > 1".
    Walking thought scsi scatterlist with more as 1 segment now.
  * Bug #2893343: VMALLOC_END was overlapping coLinux shared host memory.
    If user used mem=1000, then this crashed Linux kernel or the host.
    Maximal guest memory limit is 984 MB, host driver will adjust it now.
  * Bug #2911886: Move file to subdirecory was blocked under cofs.
  * Bugfix pci device list. conet0 was missing in bootlog sometimes.

  Console:
  * FLTK: Fix buffer overflow for option cocon=x*y with x > 256 columns.

* Version 0.7.5
  * Bug #1959846, #2760666: Don't crash the host, if an other virtualization
    runs in VMX mode.

  Network:
  * Bug #2849262: SLiRP: Active FTP failed with "500 Illegal PORT command".